--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
 
   # ___ Application
   app:
+    container_name: enko-app
     build:
       context: ./docker/app/
       dockerfile: app.dockerfile
@@ -13,6 +14,7 @@ services:
 
   # ___ Web
   nginx:
+    container_name: enko-nginx
     build:
       context: ./docker/nginx
       dockerfile: web.dockerfile
@@ -21,9 +23,12 @@ services:
       - app
     ports:
       - 8080:80
+    volumes:
+      - ./docker/nginx/vhost.conf:/etc/nginx/conf.d/default.conf
 
   # ___ Database
   mysql:
+    container_name: enko-mysql
     image: mysql
     ports: 
       - 8089:3306
@@ -38,6 +43,7 @@ services:
 
   # ___ PhpMyAdmin
   phpmyadmin:
+    container_name: enko-phpmyadmin
     image: phpmyadmin/phpmyadmin
     links: 
       - mysql:db
@@ -46,7 +52,7 @@ services:
     environment:
       MYSQL_USER: root
       MYSQL_PASSWORD: root
-      MYSQL_ROOT_PASSWORD: root 
+      MYSQL_ROOT_PASSWORD: root
 
 volumes:
   persistent:
