--- a/nginx/vhost.conf
+++ b/nginx/vhost.conf
@@ -1,10 +1,12 @@
 server {
+
     listen 80;
+    root /var/www/api/public;
     index index.php index.html;
-    root /var/www;
+    server_name localhost;
 
     location / {
-        try_files $uri /index.php?$args;
+        try_files $uri $uri/ /index.php?$query_string;
     }
 
     location ~ \.php$ {
@@ -15,4 +17,5 @@ server {
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param PATH_INFO $fastcgi_path_info;
     }
+
 }
